--- a/public/css/locations.css
+++ b/public/css/locations.css
@@ -186,9 +186,15 @@ LAYOUT
 }
 
 .custom-checkbox-input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+    appearance: auto;
+    -webkit-appearance: auto;
+    -moz-appearance: auto;
+    width: 1rem;
+    height: 1rem;
+    margin: 0;
+    accent-color: var(--primary-color);
+    cursor: pointer;
+    flex-shrink: 0;
 }
 
 .custom-checkbox {
@@ -240,7 +246,7 @@ LAYOUT
 }
 
 #search-now-btn:hover {
-    background-color: #1967d2;
+    background-color: var(--tertiary-color);
 }
 
 #reset-filters-btn:hover {
